[tool.poetry]
name = "ai-editor-streamlit"
version = "0.1.0"
description = "Proofread your Polish articles, get title, lead and excerpt propositions with help of AI"
authors = ["Jarema Piekutowski <jarema.piekutowski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.36.0"
openai = "^1.37.0"
python-docx = "^1.1.2"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"
black = "^24.4.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
